# mathStuff

./: .gitignore  LICENSE  README.md  mathStuff.cabal
src/: Algebra.hs  Art.hs  Internal.hs  Logic.hs  Sequence.hs
