cabal-version:      2.4
name:               mathStuff
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT
author:             Albert Lee
maintainer:         lee3445@purdue.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:

library
    exposed-modules:  Algebra Sequence Logic

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
        transformers >= 0.5.6 && < 0.6,
        megaparsec >= 9.4.1 && < 9.5,
    hs-source-dirs:   src
    default-language: Haskell2010
